--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ matplotlib-inline==0.1.7
 morfeusz2 @ http://download.sgjp.pl/morfeusz/20250216/Windows/64/morfeusz2-1.99.10-20250216-cp311-cp311-win_amd64.whl#sha256=a4fe457c12292a0e0990a3ac5acc9bb77a0b76ffebc85e8352bba3d754d9fbe8
 nest-asyncio==1.6.0
 nltk==3.9.1
+numpy==2.2.4
 packaging==24.2
+pandas==2.2.3
 parso==0.8.4
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
@@ -24,13 +26,18 @@ psutil==7.0.0
 pure_eval==0.2.3
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
+pytz==2025.1
 pywin32==309
 pyzmq==26.3.0
 regex==2024.11.6
+scikit-learn==1.6.1
+scipy==1.15.2
 six==1.17.0
 stack-data==0.6.3
+threadpoolctl==3.6.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2025.1
 wcwidth==0.2.13
